[project]
name = "dimmer"
version = "0.2.0"
description = "Monitor brightness manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "monitorcontrol>=4.1.1",
    "schedule>=1.2.2",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 120
